# yakk

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  YAKK-PLAN.md  flake.nix  gemini-extension.json  mkdocs.yml  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
docs/: strip-to-local.md
hooks/: pre-push
installer/: README.md  pyproject.toml
installer/yakk_install/: __init__.py  checker.py  cli.py  dependencies.yaml  installer.py  logger.py
scripts/: cleanup-for-reinstall.sh  compare-voice-modes.sh  conversation_browser.py  diagnose-wsl-audio.py  release.py  sync-dependencies.sh  test-stt-direct.py  test-vad-enhancement.py
tests/: __init__.py  conftest.py  test_audio_format_config.py  test_auth.py  test_auto_focus_pane.py  test_changelog_resource.py  test_cli_config_edit.py  test_clone_cli.py  test_clone_profiles.py  test_conch.py  test_concurrent_stdio.py  test_config_multiline.py  test_config_tilde_expansion.py  test_configuration_management.py  test_conversation_browser_playback.py  test_converse_cancellation.py  test_converse_critical_path.py  test_credential_store.py  test_dependencies.py  test_diagnostics.py  test_endpoint_info_attributes.py  test_ffmpeg_check.py  test_ffmpeg_demo.py  test_help_comprehensive.py  test_hooks_cli.py  test_installers.py  test_min_duration_integration.py  test_mlx_audio_install.py  test_openai_error_parser.py  test_pronunciation.py  test_provider_detection.py  test_provider_discovery.py  test_provider_resilience.py  test_provider_resilience_simple.py  test_provider_selection.py  test_provider_tools.py  test_release_notes_prompt.py  test_sayas_cli.py  test_selective_tool_loading.py  test_serve.py  (+25 more)
(+214 files in other folders)
