[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yakk-install"
version = "8.6.1"
description = "Installer for Yakk - handles system dependencies and installation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mbailey", email = "mbailey@example.com"},
]
keywords = ["yakk", "installer", "mcp", "voice", "setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Installation/Setup",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/mbailey/yakk"
Repository = "https://github.com/mbailey/yakk"
Issues = "https://github.com/mbailey/yakk/issues"

[project.scripts]
yakk-install = "yakk_install.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["yakk_install"]
include = [
  "yakk_install/**/*.py",
  "yakk_install/**/*.yaml",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
  "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
include = [
  "/yakk_install",
  "/README.md",
  "/pyproject.toml",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
  "**/.DS_Store",
]
